# CppTasks

./: README.md
BigInteger:Rational/: README.md  biginteger.cpp  biginteger.h  main.cpp  rational.cpp  rational.h
Geometry/: README.md  geometry.h  main.cpp
List+iterators/: README.md  list+iterators.h  test.cpp
String/: CMakeLists.txt  README.md  main.cpp  main_test.cpp  myString.cpp  myString.h
Tuple/: README.md
someFunctions/: std::advance.cpp  std::distance.cpp  std::enable_if.cpp  std::forward.cpp  std::is_constructible.cpp  std::is_same.cpp  std::move.cpp  std::remove_const.cpp
